# TechLAApp

scrabble_project/: Bag.h  Board.cpp  Board.h  CMakeLists.txt  ConfigFile.h  ConsolePrinter.cpp  Dictionary.cpp  Dictionary.h  Exceptions.h  Makefile  Move.cpp  Move.h  Player.cpp  Player.h  README.md  Square.h  Tile.h  Trie.cpp  Trie.h  Util.h  board_test.txt  config.txt  dummy.txt  main.cpp  scrabble
